--- a/Frontend/src/components/Home/Home.css
+++ b/Frontend/src/components/Home/Home.css
@@ -33,6 +33,7 @@
     width: 9vmax;
     font: 500 1vmax "Roboto";
   }
+
   .banner > a > button:hover {
     background-color: rgba(255, 255, 255, 0);
     color: white;
@@ -46,7 +47,7 @@
     position: absolute;
     top: 0%;
     left: 0;
-    /* clip-path: polygon(100% 68%, 0 100%, 100% 100%); */
+    clip-path: polygon(100% 68%, 0 100%, 100% 100%);
     max-width: 100%;
   }
   
@@ -113,7 +114,6 @@
   
   .productCard:hover {
     box-shadow: 0 0 5px rgba(15, 15, 15, 0.26);
-  
     transform: translateY(-1vmax);
   }
   
