--- a/Frontend/src/components/Layout/Header/Header.css
+++ b/Frontend/src/components/Layout/Header/Header.css
@@ -5,7 +5,7 @@ body {
 
 header {
     background-color: #fff;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border-bottom: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -76,55 +76,7 @@ nav {
     display: flex;
     align-items: center;
     gap: 15px;
-}
-
-.search-container {
     position: relative;
-    width: 40px;
-    transition: width 0.4s ease-in-out;
-    display: flex;
-    align-items: center;
-}
-
-.search-container:hover {
-    width: 250px;
-}
-
-.search-icon {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-    transition: opacity 0.2s ease-out;
-}
-
-.search-container:hover .search-icon {
-    opacity: 0; /* Hide icon when expanding */
-}
-
-.search-bar {
-    width: 0;
-    height: 40px;
-    padding: 10px 15px;
-    border: 1px solid #ddd;
-    border-radius: 20px;
-    font-size: 16px;
-    opacity: 0;
-    transition: width 0.4s ease-in-out, opacity 0.4s;
-}
-
-.search-container:hover .search-bar {
-    width: 100%;
-    opacity: 1;
-}
-
-.search-bar:focus {
-    outline: none;
-    border-color: #007BFF;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
 .search-profile-cart a {
@@ -138,4 +90,11 @@ nav {
 .search-profile-cart a img {
     width: 100%;
     height: 100%;
+}
+
+.search-profile-cart::nth-child(3){
+        position: absolute;
+        height: 3rem;
+        width: 3rem;
+        margin-left: 0.5rem;
 }
