User Delete Implemented

--- a/Frontend/src/components/Layout/Header/UserOptions.css
+++ b/Frontend/src/components/Layout/Header/UserOptions.css
@@ -6,8 +6,8 @@
     margin-top: -1.2rem;
   }
   
-  /* .speedDialIcon {
-    width: 56px;
-    height: 56px;
+  .speedDialIcon {
+    width: 3.45rem;
+    height: 3.45rem;
     border-radius: 100%;
-  } */
+  }
